--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "concurrently \"npm run start-server\" \"npm run start-client\"",
     "start-server": "cd server && npm run dev",
-    "start-client": "cd client && npm run dev"
+    "start-client": "cd client && npm run dev",
+    "build": "npm install && cd server && npm install && cd ../client && npm install"
   },
   "keywords": [],
   "author": "",
