added notification system

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT = 3000
 MONGO_URL = mongodb+srv://a1byn:a169n005@daryntech.jxuelry.mongodb.net/online_shop?retryWrites=true&w=majority
 JWT_SECRET = qwerty123456
 NINJAS_API_KEY = g/EYGXGBSKrTen85qoMxNg==l2dvznc0sbY7EgBF
+EMAIL_USER = a1byn.talgat05@gmail.com
+EMAIL_PASS = dolp cqtz jrpd npdy
