--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket-client": "^1.0.0",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
