--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.11",
     "nodemon": "^3.0.3",
     "path": "^0.12.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^4.7.4"
   }
 }
