--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "concurrently \"npm run start-server\" \"npm run start-client\"",
-    "start-server": "cd server && npm run dev",
+    "start-server": "cd server && npm run server",
     "start-client": "cd client && npm run dev",
     "build": "npm install && cd server && npm install && cd ../client && npm install"
   },
