--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "i18next": "^23.10.0",
+    "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
+    "react-loaders": "^3.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
