--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "socket-client": "^1.0.0",
